@@ -1,5 +1,5 @@
 AUX gxneur-0.9.3-CFLAGS.patch 808 RMD160 1067c513f4eb9918a746d3c8ece21cb67bc1169c SHA1 d0a6cb653d473aedb4e31411ee66e4c2a7ae195d SHA256 6b3e38af6ff8b7cd2ef38583f28680cec06e39573b98f1e3c3496486d78537c7
 DIST gxneur-0.9.3.tar.bz2 320584 RMD160 e6b2d64af9f72ca32cc9986738e843f2cefb2f5d SHA1 e024a6b8809a02bc37cb3590abb8b4ebec5cf726 SHA256 281459400d0d3beb48b82a4d33055724ee7216787304d9c28c9bc339e574c4bd
-EBUILD gxneur-0.9.3.ebuild 1186 RMD160 c198ad034d774075ce320cebad56270ed61a2bec SHA1 a5f742c58f6be80d9e23c9a25a2e96de8ec5bab0 SHA256 e59dc582fcac5368a2079936ba6f3d61ad1306425fbd1fab98db915255271f82
-MISC ChangeLog 264 RMD160 69cb8b7c9f9540efb8b5cdb730d9419592698b0d SHA1 6ceaf891bed16a91d896a972e72b21bb5181d704 SHA256 ea6ab61d97dafe7e873aabd420deb92afafa9112886acd95139914f291d8a9a7
+EBUILD gxneur-0.9.3.ebuild 1184 RMD160 110e05b164b85156df4ca3e954adb4fdb18f721e SHA1 44846df8fb0583a5b3c706cc6ff6550effaab735 SHA256 6775952758e64f31fa4bc1a5c95aabb117cee3b1194b0126f9158d6e36d4d043
+MISC ChangeLog 417 RMD160 25caceec331578f2f720542b6d60bb885db6a89e SHA1 ad07e8600e8d560397078095f55664b7776dcfdb SHA256 90c4963047274776ceed5f3d9baeaf71b4048ba0a8a72d01676f55cd98b0f3ab
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
