@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Apr 2009; Peter Volkov <pva@gentoo.org> gxneur-0.9.3.ebuild:
+  Make eutils/versionator eclass globally inherited, thank Tommy for catching
+  this.
+
   03 Apr 2009; Peter Volkov <pva@gentoo.org> +gxneur-0.9.3.ebuild,
   +files/gxneur-0.9.3-CFLAGS.patch, +metadata.xml:
   New Ebuild for bug 169494.
